--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,6 @@
     width: 100%;
     background-color: white;
     border-radius: 8px;
-    padding: 16px;
     box-shadow: 0px 6px 10px -2px rgba(85, 105, 135, 0.04), 0px 2px 4px -2px rgba(85, 105, 135, 0.02);
 }
 
@@ -386,6 +385,10 @@
     font-size: 18px;
     font-weight: 800;
     margin-bottom: 0;
+}
+
+.sub-heading {
+    font-size: 16px;
 }
 
 .latest-table .tr {
@@ -401,14 +404,54 @@
 
 .latest-table .tr:first-child {
     padding-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.latest-table .see-all {
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+    color: #8B42F2;
+}
+
+.latest-table .see-all:hover {
+    color: #7738ce;
+}
+
+.latest-table .round-btns-parent {
+    display: flex;
+    justify-content: space-between;
+    gap: 0;
+    border: 1px solid rgba(238, 240, 243, 1);
+    border-radius: 999px;
+}
+
+.latest-table .btn {
+    font-size: 14px;
+    font-weight: 500;
+    color: black;
+}
+
+.latest-table .btn:hover {
+    color: #8B42F2;
+}
+
+.latest-table .active {
+    color: #8B42F2;
+    border: 1px solid #8B42F2;
+    border-radius: 999px;
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 /* Latest Table Left Part */
 .latest-table .left-part {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     gap: 11px;
+    min-width: 192px;
 }
 
 .latest-table .lp-img-div {
@@ -423,7 +466,6 @@
 }
 
 .latest-table .lp-img {
-    min-width: 100%;
     min-height: 100%;
 }
 
@@ -442,6 +484,36 @@
     font-size: 14px;
     font-weight: 500;
     color: #4D5F7A;
+    display: flex;
+    justify-content: start;
+    gap: 12px;
+}
+
+/* Latest Table Center Part */
+.latest-table .center-part {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.latest-table .flags {
+    display: flex;
+    justify-content: start;
+    gap: 8px;
+    min-width: 48px;
+}
+
+.latest-table .flag-img-div {
+    width: 20px;
+    display: inline-block;
+}
+
+.latest-table .sm-circle {
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background: #D5DAE1;
 }
 
 /* Latest Table Right Part */
@@ -478,7 +550,7 @@
 }
 
 .latest-table .rpc {
-    min-width: 53px;
+    min-width: 90px;
     text-align: center;
 }
 
@@ -486,6 +558,7 @@
     font-size: 18px;
     font-weight: 700;
     color: #16A34A;
+    display: block;
 }
 
 .latest-table .rpr {
@@ -511,6 +584,7 @@
     font-size: 12px;
     color: #404F65;
     font-weight: 500;
+    display: block;
 }
 
 /* Players Cards Styling */
@@ -677,6 +751,170 @@
     text-align: center;
 }
 
+
+
+/* Valuable Players Table Styling */
+.valuable-players-table .tr {
+    padding: 26px 20px 23px;
+}
+
+.valuable-players-table .right-part {
+    gap: 16px;
+}
+
+.valuable-players-table .rpc-val {
+    font-size: 14px;
+    color: black;
+}
+
+.valuable-players-table .age {
+    color:#4D5F7A;
+    font-size: 12px;
+}
+
+/* XI Table Styling */
+.xi-table {
+    background: url('../images/xi-bg.png');
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    border-radius: 8px;
+    color: white;
+}
+
+.xi-table .table-heading {
+    font-size: 18px;
+    font-weight: 800;
+    margin-bottom: 0;
+}
+
+.xi-table .tr {
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
+
+.xi-table .tr:first-child, .tr:last-child {
+    border-bottom: none;
+}
+
+.xi-table .tr:first-child {
+    padding: 18px 20px 16px;
+    padding-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.xi-table .tr:nth-child(2) {
+    margin-bottom: 18px;
+}
+
+.xi-table .tr:nth-child(3) {
+    padding-left: 68.5px;
+    padding-right: 74.5px;
+    margin-bottom: 43px;
+}
+
+.xi-table .tr:nth-child(4) {
+    margin-bottom: 40px;
+}
+
+.xi-table .tr:nth-child(5) {
+    padding-left: 35.5px;
+    padding-right: 33px;
+    margin-bottom: 33px;
+}
+
+.xi-table .tr:nth-child(6) {
+    padding-left: 96.5px;
+    padding-right: 121px;
+    margin-bottom: 60px;
+}
+
+.xi-table .tr:nth-child(7) {
+    margin-bottom: 34px;
+}
+
+.xi-table .justify-center {
+    justify-content: center;
+}
+
+.xi-table .justify-sp {
+    justify-content: space-between;
+}
+
+.xi-card {
+    padding: 4px 16px 6px 3.5px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 999px;
+    display: flex;
+    justify-content: start;
+    gap: 6px;
+}
+
+.xi-card .xi-img-div {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 50%;
+    position: relative;
+}
+
+.xi-card .xi-img {
+    min-width: 100%;
+    min-height: 100%;
+    border-radius: 50%;
+}
+
+.xi-card .sm-img-div {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    bottom: -2px;
+    right: -3.5px;
+    z-index: 1;
+}
+
+.xi-card .xi-txt-div span {
+    display: block;
+}
+
+.xi-card .name {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 17.64px;
+    margin-bottom: 2px;
+}
+
+.xi-card .value {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 15.12px;
+}
+
+/* Highest Value Table Styling */
+.highest-value-table .table-heading {
+    min-width: 155px;
+}
+
+.highest-value-table .right-part {
+    gap: 53px;
+}
+
+.highest-value-table .rpc {
+    text-align: start;
+}
+
+/* Most Valuable Table Styling */
+.most-valuable-table .tr:first-child {
+    min-height: 56.28px;
+}
+
+.most-valuable-table .rpc {
+    text-align: start;
+}
+
 /* Enjoying Card Styling */
 .enjoying-card {
     padding: 45px 52px 40px;
@@ -712,6 +950,232 @@
 
 }
 
+.enjoying-card .link:hover {
+    color: #35765f;
+}
+
+/* Fixtures Table Styling */
+.fixtures-table .tr {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+.live-img-div {
+    background-color: rgba(86, 182, 148, 0.1)!important;
+}
+
+.live-name {
+    font-weight: 700!important;
+}
+
+.fixtures-table .tr:nth-child(2) {
+    border-bottom: 0;
+}
+
+.fixtures-table .lp-img {
+    height: 24px;
+    min-height:auto;
+}
+
+.fixtures-table .brand-name {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.fixtures-table .cpl {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 10.67px;
+    min-width: 200px;
+}
+
+.fixtures-table .brand-img {
+    height: 26.67px;
+    max-width: 26.67px;
+}
+
+
+.center-txt {
+    font-size: 14px;
+    font-weight: 400;
+    color: #556987;
+}
+
+.fixtures-table .cpr {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    min-width: 240px;
+    gap: 11px;
+}
+
+.bell-icon-div {
+    height: 24px;
+    width: 24px;
+}
+
+/* Standings Table Styling */
+.grey-txt {
+    font-size: 14px;
+    font-weight: 400;
+    color: #252728;
+    opacity: 70%;
+    min-width: 24px;
+    text-align: center;
+}
+
+.standings-table .tr {
+    padding: 8px 16px;
+    position: relative;
+}
+
+.standings-table .tr-before-blue::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 3px;
+    background-color: #5383EC;
+}
+
+.standings-table .tr-before-yellow::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 3px;
+    background-color: #EA8237;
+}
+
+.standings-table .tr-before-green::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 3px;
+    background-color: #58A65C;
+}
+
+.standings-table .left-part {
+    min-width: 64px;
+    gap: 8px;
+}
+
+.standings-table .standing-img-div {
+    width: 24px;
+    height: 24px;
+}
+
+.brand-name {
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.standings-table .right-part {
+    gap: 8px!important;
+}
+
+.standings-table .points {
+    font-weight: 700;
+    color: #252728;
+}
+
+.standings-table .last-5 {
+    min-width: 92px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.standings-table .last-5-txt {
+    justify-content: center;
+}
+
+.standings-table .icon-circle {
+    width: 16px;
+    height: 16px;
+    color: white;
+    border-radius: 50%;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.standings-table .true-circle {
+    background-color: #56B694;
+}
+
+.standings-table .false-circle {
+    background-color: #E52D2D;
+}
+
+.standings-table .line-circle {
+    color: rgba(37, 39, 40, 0.7);
+    background-color: #E5E5E5;
+}
+
+/* Standing Right Table */
+.standing-right-table .tr {
+    padding: 18px 20px;
+}
+
+.standing-right-table .tr:last-child {
+    padding-bottom: 26px;
+}
+
+.standing-right-table .xi-card {
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+    display: flex;
+    justify-content: start;
+    gap: 6px;
+}
+
+.position-row {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 12px;
+    min-width: 261px;
+}
+
+.standing-right-table .position {
+    min-width: 120px;
+}
+
+.standing-right-table .age {
+    color:#4D5F7A;
+    font-size: 12px;
+}
+
+.standing-right-table .icon-parent {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 5.5px;
+}
+
+.standing-right-table .sm-icon-parent {
+    width: 20px;
+}
+
+.standing-right-table .icon-txt {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.standing-right-table .right-part {
+    min-width: 120px;
+    gap: 32px;
+}
+
+
 /* Media Queries with Max-Width */
 @media screen and (max-width: 1199.9px) {
     /* Header */
@@ -724,8 +1188,33 @@
     }
 
     /* Latest Table Styling */
+    .latest-table .left-part {
+        gap: 8px;
+    }
+
+    .latest-table .lp-img-div {
+        width: 48px;
+        height: 48px;
+    }
+
+    .latest-table .name {
+        font-size: 14px;
+    }
+
+    .latest-table .position {
+        font-size: 12px;
+    }
+
+    .latest-table .center-part {
+        gap: 8px;
+    }
+    
     .latest-table .right-part {
-        gap: 26px;
+        gap: 24px;
+    }
+
+    .valuable-players-table .rpc-val {
+        font-size: 12px;
     }
 
     /* Players Cards Styling */
@@ -754,6 +1243,12 @@
 
     .player-card-2 .left-img-div {
         padding-top: 10px;
+    }
+
+    /* XI Table Styling */
+    .xi-table .tr:nth-child(6) {
+        padding-left: 64px;
+        padding-right: 74px;
     }
 }
 
@@ -820,6 +1315,12 @@
     button.navbar-toggler {
         padding-bottom: 0;
     }
+
+    /* XI Table Styling */
+    .xi-table .tr:nth-child(6) {
+        padding-left: 96.5px;
+        padding-right: 121px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -861,6 +1362,12 @@
 
     .player-card-2 .player-card-name {
         margin-bottom: 12px;
+    }
+
+    /* XI Table Styling */
+    .xi-table .tr:nth-child(6) {
+        padding-left: 70px;
+        padding-right: 70px;
     }
 }
 
@@ -961,12 +1468,18 @@
     }
 
     .enjoying-card .link {
-        padding: 16px 30px;
+        padding: 14px 26px;
+        font-size: 18px;
     }
 }
 
 @media screen and (max-width: 480px) {
     /* Latest Table Styling */
+
+    .latest-table .info-div {
+        min-width: 140px;
+    }
+
     .latest-table .name {
         font-size: 14px;
     }
@@ -978,6 +1491,10 @@
 
     .latest-table .position {
         font-size: 12px;
+    }
+
+    .latest-table .center-part {
+        min-width: 130px;
     }
 
     .latest-table .right-part {
@@ -1056,6 +1573,22 @@
         padding: 4px 16px;
     }
 
+    /* XI Cards Styling */
+    .xi-table .tr:nth-child(3) {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    .xi-table .tr:nth-child(5) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .xi-table .tr:nth-child(6) {
+        padding-left: 26px;
+        padding-right: 26px;
+    }
+
     /* Enjoying Cards Styling */
     .enjoying-card {
         padding: 27px 26px 29px;
@@ -1111,11 +1644,6 @@
         padding: 10px;
     }
 
-    .latest-table .lp-img-div {
-        width: 28px;
-        height: 28px;
-    }
-
     .latest-table .name {
         font-size: 12px;
     }
@@ -1136,10 +1664,6 @@
 
     .latest-table .rpl-img {
         height: 24px;
-    }
-
-    .latest-table .rpc {
-        min-width: 44px;
     }
 
     .latest-table .rpc-val {
@@ -1210,6 +1734,32 @@
 
     .player-card .bold-text {
         font-size: 13px;
+    }
+
+    /* XI Table Styling */
+    .xi-card .name {
+        font-size: 10px;
+    }
+
+    .xi-card .value {
+        font-size: 9px;
+    }
+
+    .xi-table .tr:nth-child(3) {
+        padding-left: 2px;
+        padding-right: 2px;
+        margin-bottom: 34px;
+    }
+
+    .xi-table .tr:nth-child(5) {
+        padding-left: 2px;
+        padding-right: 2px;
+    }
+
+    .xi-table .tr:nth-child(6) {
+        padding-left: 2px;
+        padding-right: 2px;
+        margin-bottom: 36px;
     }
 
     /* Enjoying Card Styling */
