--- a/css/style.css
+++ b/css/style.css
@@ -960,6 +960,28 @@
     padding-bottom: 12px;
 }
 
+.fixtures-table .pagination-div {
+    background-color: #FAFAFA;
+}
+
+.fixtures-table .pagination-number-parent {
+    padding-right: 4px;
+}
+
+.fixtures-table .pagination-number {
+    width: 34px;
+    height: 32px;
+    border: 1px solid #EEF0F3;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: white;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 999px;
+}
+
+
 .live-img-div {
     background-color: rgba(86, 182, 148, 0.1)!important;
 }
@@ -1176,6 +1198,54 @@
 }
 
 
+/* Footer Styling */
+.footer {
+    color: #4D5F7A;
+    padding: 40px 0;
+    background-color: white;
+}
+
+.footer p {
+    font-size: 16px;
+}
+
+.footer ul {
+    list-style-type: none;
+    display: flex;
+    padding-left: 0;
+}
+
+.footer li {
+    display: inline-block;
+}
+
+.footer .social-ul {
+    justify-content: start;
+    align-items: center;
+    font-size: 24px;
+    gap: 24px;
+}
+
+.footer .social-a {
+    color: #556987;
+}
+
+.footer .social-a:hover {
+    color: #4c5c74;
+}
+
+
+.footer .f-links-ul {
+    font-size: 14px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer .f-link {
+    text-decoration: none;
+    color: #556987;
+}
+
 /* Media Queries with Max-Width */
 @media screen and (max-width: 1199.9px) {
     /* Header */
@@ -1249,6 +1319,11 @@
     .xi-table .tr:nth-child(6) {
         padding-left: 64px;
         padding-right: 74px;
+    }
+
+    /* Footer Styling */
+    .footer .f-links-ul {
+        font-size: 13px;
     }
 }
 
@@ -1470,6 +1545,15 @@
     .enjoying-card .link {
         padding: 14px 26px;
         font-size: 18px;
+    }
+
+    /* Footer Styling */
+    .footer p {
+        font-size: 15px;
+    }
+
+    .footer .social-ul {
+        font-size: 20px;
     }
 }
 
@@ -1770,6 +1854,11 @@
     .enjoying-card .link {
         font-size: 14px;
         padding: 10px 22px;
+    }
+
+    /* Footer Syling */
+    .footer p {
+        font-size: 14px;
     }
 }
 
